[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/plr-movement.gd" type="Script" id=1]
[ext_resource path="res://Assets/Blue2.png" type="Texture" id=2]
[ext_resource path="res://Assets/sfx/jump.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Blue1.png" type="Texture" id=4]
[ext_resource path="res://prefabs/trail.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Light_texture.png" type="Texture" id=6]
[ext_resource path="res://scripts/ScreenShake.gd" type="Script" id=8]
[ext_resource path="res://Assets/sfx/enemy_died.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Blue/trail:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Blue/Blue1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Blue/Blue2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Blue/Light2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Blue/Light2D:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Blue/Light2D:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.75 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Blue:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Blue:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "died"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Blue:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Blue/trail:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Blue/Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.75, 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Blue/Blue1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.75 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Blue/Blue2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.75 ) ]
}

[sub_resource type="CanvasItemMaterial" id=14]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=13]
light_mode = 1

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.501613, 0.671779 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0950919 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]
resource_local_to_scene = true
offsets = PoolRealArray( 0.356061, 1 )
colors = PoolColorArray( 0.35, 1.5, 1.8, 1, 0.172549, 0.0666667, 0.239216, 1 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 3, 3 )

[node name="Bloo" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/RESET = SubResource( 6 )
anims/died = SubResource( 1 )
anims/walk = SubResource( 8 )

[node name="Blue" type="Node2D" parent="."]
position = Vector2( 0, -3 )

[node name="Blue1" type="Sprite" parent="Blue"]
modulate = Color( 0.415686, 0.913725, 1, 1 )
self_modulate = Color( 1.25, 1.25, 1.25, 1 )
material = SubResource( 14 )
position = Vector2( 0, 3 )
texture = ExtResource( 4 )
offset = Vector2( 0, -3 )

[node name="Blue2" type="Sprite" parent="Blue"]
position = Vector2( 0, 3 )
texture = ExtResource( 2 )
offset = Vector2( 0, -3 )

[node name="trail" parent="Blue" instance=ExtResource( 5 )]
material = SubResource( 13 )
position = Vector2( 4, 7 )
width = 6.0
width_curve = SubResource( 9 )
gradient = SubResource( 7 )
length = 10

[node name="Light2D" type="Light2D" parent="Blue"]
texture = ExtResource( 6 )
texture_scale = 0.8
color = Color( 0, 0.5, 1, 1 )
energy = 0.75

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -3 )
shape = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
zoom = Vector2( 0.32, 0.32 )
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 4.0
offset_v = -0.5
drag_margin_left = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_drag_margin = true

[node name="ScreenShake" type="Node" parent="Camera2D"]
script = ExtResource( 8 )

[node name="Timer" type="Timer" parent="Camera2D/ScreenShake"]
one_shot = true

[node name="Tween" type="Tween" parent="Camera2D/ScreenShake"]

[node name="jump_sfx" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
volume_db = -5.0

[node name="dash_sfx" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -10.0

[node name="dashDuration" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Camera2D/ScreenShake/Timer" to="Camera2D/ScreenShake" method="_on_Timer_timeout"]
[connection signal="timeout" from="dashDuration" to="." method="_on_dashDuration_timeout"]
